fix(styles): change align to justify in social media

--- a/packages/styles/scss/components/_socialmedia.scss
+++ b/packages/styles/scss/components/_socialmedia.scss
@@ -26,7 +26,7 @@
   flex-flow: column nowrap;
   align-items: flex-start;
 
-  &__align__center {
+  &__justify__center {
     align-items: center;
   }
 
